--- a/chat-server-example.cabal
+++ b/chat-server-example.cabal
@@ -1,4 +1,4 @@
-name:                chat-server
+name:                chat-server-example
 version:             0.1
 synopsis:            Example chat server demonstrating async I/O and STM
 description:
@@ -25,7 +25,7 @@ category:            Concurrency
 build-type:          Simple
 cabal-version:       >=1.8
 
-executable chat-server
+executable chat-server-example
     main-is: Main.hs
 
     ghc-options: -Wall
